<resources>
    <string name="app_name">The Digital Daily</string>
    <string name="app_nam_settings">The Digital Daily Settings</string>
    <string name="article_image_description">article image</string>
    <string name="toolbar_title_text">The Digital Daily</string>
    <string name="section_title_music">Music</string>
    <string name="section_title_games">Games</string>
    <string name="section_title_tech">Technology</string>
    <string name="section_title_science">Science</string>
    <string name="section_title_books">Books</string>
    <string name="section_title_comics">Comics</string>
    <string name="section_title_default">News</string>
    <string name="no_articles">Uh oh! It looks like there are no news articles. You know, they say no news is good news. Check back again a little later; maybe something newsworthy will have happened then.</string>
    <string name="no_internet">Ah nuts, it looks like there is a problem with your internet connection. You should probably get that fixed.</string>
    <string name="settings_menu_item">Settings</string>
    <string name="settings_title">Daily Digital Settings</string>
    <string name="api_tags_default_value">all</string>
    <string name="settings_order_by_label">Order Articles By</string>
    <string name="settings_order_by_key" translatable="false">order_by</string>
    <string name="settings_order_by_default" translatable="false">newest</string>
    <string name="settings_order_by_newest_label">Newest</string>
    <string name="settings_order_by_newest_value" translatable="false">newest</string>
    <string name="settings_order_by_oldest_label">Oldest</string>
    <string name="settings_order_by_oldest_value" translatable="false">oldest</string>
    <string name="settings_music_choices_label">Music Options</string>
    <string name="settings_music_choices_key" translatable="false">music_options</string>
    <string name="settings_music_default_value" translatable="false">@string/api_tags_default_value</string>
    <string name="settings_show_music_by_genre_all_label">All</string>
    <string name="settings_show_music_by_genre_all_value" translatable="false">@string/api_tags_default_value</string>
    <string name="settings_show_music_by_genre_blues_label">Blues</string>
    <string name="settings_show_music_by_genre_blues_value" translatable="false">music/blues</string>
    <string name="settings_show_music_by_genre_classical_label">Classical</string>
    <string name="settings_show_music_by_genre_classical_value" translatable="false">music/classical-music-and-opera</string>
    <string name="settings_show_music_by_genre_country_label">Country</string>
    <string name="settings_show_music_by_genre_country_value" translatable="false">music/country</string>
    <string name="settings_show_music_by_genre_dance_label">Dance</string>
    <string name="settings_show_music_by_genre_dance_value" translatable="false">music/dance-music</string>
    <string name="settings_show_music_by_genre_drumnbass_label">Drum-n-bass</string>
    <string name="settings_show_music_by_genre_drumnbass_value" translatable="false">music/drum-n-bass</string>
    <string name="settings_show_music_by_genre_dubstep_label">Dubstep</string>
    <string name="settings_show_music_by_genre_dubstep_value" translatable="false">music/dubstep</string>
    <string name="settings_show_music_by_genre_electronicmusic_label">Electronic</string>
    <string name="settings_show_music_by_genre_electronicmusic_value" translatable="false">music/electronicmusic</string>
    <string name="settings_show_music_by_genre_experimental_label">Experimental</string>
    <string name="settings_show_music_by_genre_experimental_value" translatable="false">music/experimental-music</string>
    <string name="settings_show_music_by_genre_folk_label">Folk</string>
    <string name="settings_show_music_by_genre_folk_value" translatable="false">music/folk</string>
    <string name="settings_show_music_by_genre_hiphop_label">Hip-Hop</string>
    <string name="settings_show_music_by_genre_hiphop_value" translatable="false">music/hip-hop</string>
    <string name="settings_show_music_by_genre_indie_label">Indie</string>
    <string name="settings_show_music_by_genre_indie_value" translatable="false">music/indie</string>
    <string name="settings_show_music_by_genre_jazz_label">Jazz</string>
    <string name="settings_show_music_by_genre_jazz_value" translatable="false">music/jazz</string>
    <string name="settings_show_music_by_genre_metal_label">Metal</string>
    <string name="settings_show_music_by_genre_metal_value" translatable="false">music/metal</string>
    <string name="settings_show_music_by_genre_opera_label">Opera</string>
    <string name="settings_show_music_by_genre_opera_value" translatable="false">music/opera</string>
    <string name="settings_show_music_by_genre_popandrock_label">Pop and Rock</string>
    <string name="settings_show_music_by_genre_popandrock_value" translatable="false">music/popandrock</string>
    <string name="settings_show_music_by_genre_punk_label">Punk</string>
    <string name="settings_show_music_by_genre_punk_value" translatable="false">music/punk</string>
    <string name="settings_show_music_by_genre_randb_label">R and B</string>
    <string name="settings_show_music_by_genre_randb_value" translatable="false">music/r-and-b</string>
    <string name="settings_show_music_by_genre_rap_label">Rap</string>
    <string name="settings_show_music_by_genre_rap_value" translatable="false">music/rap</string>
    <string name="settings_show_music_by_genre_reggae_label">Reggae</string>
    <string name="settings_show_music_by_genre_reggae_value" translatable="false">music/reggae</string>
    <string name="settings_show_music_by_genre_roxymusic_label">Roxy music</string>
    <string name="settings_show_music_by_genre_roxymusic_value" translatable="false">music/roxymusic</string>
    <string name="settings_show_music_by_genre_rudimental_label">Regimental</string>
    <string name="settings_show_music_by_genre_rudimental_value" translatable="false">music/rudimental</string>
    <string name="settings_books_choices_label">Books Options</string>
    <string name="settings_books_choices_key" translatable="false">books_options</string>
    <string name="settings_books_default_value" translatable="false">@string/api_tags_default_value</string>
    <string name="settings_books_by_genre_all_label">All</string>
    <string name="settings_books_by_genre_all_value">@string/api_tags_default_value</string>
    <string name="settings_books_by_genre_adventure_label">Adventure</string>
    <string name="settings_books_by_genre_adventure_value">books/adventure</string>
    <string name="settings_books_by_genre_art_label">Art</string>
    <string name="settings_books_by_genre_art_value">books/art</string>
    <string name="settings_books_by_genre_biography_label">Biography</string>
    <string name="settings_books_by_genre_biography_value">books/biography</string>
    <string name="settings_books_by_genre_classics_label">Classics</string>
    <string name="settings_books_by_genre_classics_value">books/classics</string>
    <string name="settings_books_by_genre_comics_label">Comics</string>
    <string name="settings_books_by_genre_comics_value">books/comics</string>
    <string name="settings_books_by_genre_craftsandhobbies_label">Crafts-and-Hobbies</string>
    <string name="settings_books_by_genre_craftsandhobbies_value">books/crafts-and-hobbies</string>
    <string name="settings_books_by_genre_crime_label">Crime</string>
    <string name="settings_books_by_genre_crime_value">books/crime</string>
    <string name="settings_books_by_genre_ebooks_label">Ebooks</string>
    <string name="settings_books_by_genre_ebooks_value">books/ebooks</string>
    <string name="settings_books_by_genre_ecominics_label">Economics</string>
    <string name="settings_books_by_genre_ecominics_value">books/economics</string>
    <string name="settings_books_by_genre_essays_label">Essays</string>
    <string name="settings_books_by_genre_essays_value">books/essays</string>
    <string name="settings_books_by_genre_fairytales_label">Fairytales</string>
    <string name="settings_books_by_genre_fairytales_value">books/fairytales</string>
    <string name="settings_books_by_genre_fantasy_label">Fantasy</string>
    <string name="settings_books_by_genre_fantasy_value">books/fantasy</string>
    <string name="settings_books_by_genre_fiction_label">Fiction</string>
    <string name="settings_books_by_genre_fiction_value">books/fiction</string>
    <string name="settings_books_by_genre_film_label">Film</string>
    <string name="settings_books_by_genre_film_value">books/film</string>
    <string name="settings_books_by_genre_food_label">Food</string>
    <string name="settings_books_by_genre_food_value">books/food</string>
    <string name="settings_books_by_genre_history_label">History</string>
    <string name="settings_books_by_genre_history_value">books/history</string>
    <string name="settings_books_by_genre_horror_label">Horror</string>
    <string name="settings_books_by_genre_horror_value">books/horror</string>
    <string name="settings_books_by_genre_journalism_label">Journalism</string>
    <string name="settings_books_by_genre_journalism_value">books/journalism</string>
    <string name="settings_books_by_genre_manga_label">Manga</string>
    <string name="settings_books_by_genre_manga_value">books/manga</string>
    <string name="settings_books_by_genre_manuscripts_label">Manuscripts</string>
    <string name="settings_books_by_genre_manuscripts_value">books/manuscripts</string>
    <string name="settings_books_by_genre_music_label">Music</string>
    <string name="settings_books_by_genre_music_value">books/music</string>
    <string name="settings_books_by_genre_philosophy_label">Philosophy</string>
    <string name="settings_books_by_genre_philosophy_value">books/philosophy</string>
    <string name="settings_books_by_genre_picturebooks_label">Picture-Books</string>
    <string name="settings_books_by_genre_picturebooks_value">books/picture-books</string>
    <string name="settings_books_by_genre_poetry_label">Poetry</string>
    <string name="settings_books_by_genre_poetry_value">books/poetry</string>
    <string name="settings_books_by_genre_politics_label">Politics</string>
    <string name="settings_books_by_genre_politics_value">books/politics</string>
    <string name="settings_books_by_genre_religion_label">Religion</string>
    <string name="settings_books_by_genre_religion_value">books/religion</string>
    <string name="settings_books_by_genre_romance_label">Romance</string>
    <string name="settings_books_by_genre_romance_value">books/romance</string>
    <string name="settings_books_by_genre_sciencefiction_label">Science-Fiction</string>
    <string name="settings_books_by_genre_sciencefiction_value">books/science-fiction</string>
    <string name="settings_books_by_genre_society_label">Society</string>
    <string name="settings_books_by_genre_society_value">books/society</string>
    <string name="settings_books_by_genre_sportandleisure_label">Sports and leisure</string>
    <string name="settings_books_by_genre_sportandleisure_value">books/sportandleisure</string>
    <string name="settings_books_by_genre_stage_label">Stage</string>
    <string name="settings_books_by_genre_stage_value">books/stage</string>
    <string name="settings_books_by_genre_teen_label">Teen-Books</string>
    <string name="settings_books_by_genre_teen_value">books/teen-books</string>
    <string name="settings_books_by_genre_thrillers_label">Thrillers</string>
    <string name="settings_books_by_genre_thrillers_value">books/thrillers</string>
    <string name="settings_books_by_genre_truecrime_label">True-Crime</string>
    <string name="settings_books_by_genre_truecrime_value">books/true-crime</string>
</resources>