<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="@string/settings_title">

    <ListPreference
        android:defaultValue="@string/settings_order_by_default"
        android:entries="@array/settings_order_by_labels"
        android:entryValues="@array/settings_order_by_values"
        android:key="@string/settings_order_by_key"
        android:title="@string/settings_order_by_label" />

    <ListPreference
        android:defaultValue="@string/settings_music_default_value"
        android:entries="@array/settings_music_choice_labels"
        android:entryValues="@array/settings_music_choice_values"
        android:key="@string/settings_music_choices_key"
        android:title="@string/settings_music_choices_label" />

</PreferenceScreen>